test/typecheck/reject/fail4.rift
let
  val x = true
  val y = !true
in
  x + y
end
